# ScaRC-Archived

./: .gitignore  README.md  run_avx4.sh
CMakeBuild/: .gitignore  CMakeLists.txt
CMakeBuild/Debug/: do_all  do_make
CMakeBuild/Release/: do_all  do_make
Develop/: scrc_after_exchange_revision.f90  scrc_aggregation_order.f90  scrc_aggregation_serial.f90  scrc_allocatematrix_old.f90  scrc_amg2.f90  scrc_amg_overlap_double.f90  scrc_amg_v0.f90  scrc_amg_v4.f90  scrc_amg_v6.f90  scrc_including_standalone.f90  scrc_marcos1.f90  scrc_marcos2.f90  scrc_mgm.f90  scrc_newtry.f90  scrc_serial_runs.f90  scrc_zones.f90
Develop/save/: scrc_amg_v1.f90  scrc_amg_v5.f90
Lunarc/: avx1.sh  avx10.sh  avx16.sh  avx4_short.sh  avx8.sh
Manuals/FEMTC_2018/: 00_abstract.tex  01_motivation.tex  02_discretization.tex  03_poisson.tex  04_tests.tex  FEMTC2018_Paper_Kilian.tex  Paper_Kilian.tex
Manuals/ScaRC_Documentation/: 00_basic_new.tex  01_mgm.tex  02_cases.tex  02_true.tex  MGM_method.key  MGM_method2.key  scarc_documentation.tex
Manuals/ScaRC_Guide/: 02_poisson.tex  03_direct.tex  03_solver.tex  04_iterative.tex  04_scarc.tex  05_scarc.tex  05_verification.tex  06_summary.tex  06_verification.tex  declarations.tex  scarc_bibliography.bib  scarc_guide.tex
Python/: dump.py
Python/DumpFDS/: DumpFDS.py  DumpFDS.pyproj  DumpFDS.sln  do_dump
Python/Laplacian/: .gitignore  Laplacian.py  do_dump
SSJ19/: .gitignore  doX
SSJ19/Bjarne/: case10_no_wind.fds  case10_no_wind_cpu.csv  case10_no_wind_devc.csv  case10_no_wind_hrr.csv
SSJ19/dancing_eddies/: dancing_eddies_10mesh_uscarc.fds  (+25 more)
Source/: .gitignore  .scrc.f90.un~  Doxyfile  MyDoxyTemplate  cat_scrc.sh  cats  dt  dump.f90  geom.f90  main.f90  pres.f90  read.f90  scrc.f90  scrc.f90~  scrc0.f90  scrc1.f90  velo.f90
Templates/: pres_amg  scarc_amg_fft_agg  scarc_amg_fft_agg_l2_sm8  scarc_amg_fft_agg_l3_sm8  scarc_amg_fft_cub  scarc_amg_fft_cub_l2_sm8  scarc_amg_fft_cub_l3_sm8  scarc_amg_ssor_agg  scarc_amg_ssor_agg_l2_sm8  scarc_amg_ssor_agg_l3_sm8  scarc_amg_ssor_cub  scarc_amg_ssor_cub_l2_sm8  scarc_amg_ssor_cub_l3_sm8  scarc_cgamg_fft_agg  scarc_cgamg_fft_agg_l3_sm8  scarc_cgamg_fft_cub  scarc_cgamg_fft_cub_l3_sm8  scarc_cgamg_ssor_agg  scarc_cgamg_ssor_agg_l3_sm8  scarc_cgamg_ssor_cub  scarc_cgamg_ssor_cub_l3_sm8  scarc_cggmg  scarc_cggmg_fft_l2_sm8  scarc_cggmg_fft_l3_sm8  scarc_cggmg_ssor_l2_sm8  scarc_cggmg_ssor_l3_sm8  scarc_gmg  scarc_gmg_fft_l2_sm8  scarc_gmg_fft_l3_sm8  scarc_gmg_ssor_l2_sm8  scarc_gmg_ssor_l3_sm8  uscarc
Verification/: .gitignore  Copy_Lunarc_csv.sh  FDS_Cases_scarc_lunarc.sh  FDS_Cases_scarc_mpirun.sh  FDS_Cases_scarc_qfds.sh  Move_Lunarc_csv.sh  run_scarc.sh
VisualStudio/: ScaRC.sln
(+5871 files in other folders)
